objects/MedProBT__WSController__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MedProBT__BaseURL__c</fullName>
        <label>BaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__WS1Suffix__c</fullName>
        <label>WS1Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__WS2Suffix__c</fullName>
        <label>WS2Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__WS3Suffix__c</fullName>
        <label>WS3Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro WSController</label>
</CustomObject>